--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -86,7 +86,7 @@ jobs:
       fail-fast: false
       matrix:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
-        version: [latest, 8.7.1]
+        version: [8.7.1] #, latest]
     steps:
       - uses: actions/checkout@v3
         with: {fetch-depth: 0}
