--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/gacts/gitleaks#readme",
   "dependencies": {
+    "@actions/cache": "^2.0.2",
     "@actions/core": "^1.2.5",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.0.1",
