--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -86,7 +86,7 @@ jobs:
       fail-fast: false
       matrix:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
-        version: [8.7.1] #, latest]
+        version: [7.3.0] # ,8.7.1] #, latest]
     steps:
       - uses: actions/checkout@v3
         with: {fetch-depth: 0}
@@ -101,3 +101,6 @@ jobs:
       #  uses: github/codeql-action/upload-sarif@v2
       #  with:
       #    sarif_file: ${{ steps.gitleaks.outputs.sarif }}
+
+      - run: gitleaks help
+        if: startsWith(matrix.version, '8') || matrix.version == 'latest'
