--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -104,3 +104,6 @@ jobs:
 
       - run: gitleaks help
         if: startsWith(matrix.version, '8') || matrix.version == 'latest'
+
+      - run: gitleaks --version
+        if: startsWith(matrix.version, '7')
