--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,13 +15,13 @@ concurrency:
 jobs:
   eslint:
     name: Run eslint
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env: {FORCE_COLOR: 'true'}
     steps:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-node@v4
-        with: {node-version: '16'}
+        with: {node-version: '20'}
 
       - uses: actions/cache@v3
         id: yarn-cache
@@ -37,7 +37,7 @@ jobs:
 
   dist-built:
     name: Check distributive built state
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     outputs:
       dist-changed: ${{ steps.state.outputs.changed }}
     env: {FORCE_COLOR: 'true'}
@@ -45,7 +45,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-node@v4
-        with: {node-version: '16'}
+        with: {node-version: '20'}
 
       - uses: actions/cache@v3
         id: yarn-cache
@@ -69,7 +69,7 @@ jobs:
     name: Commit and push fresh distributive
     needs: [dist-built]
     if: ${{ needs.dist-built.outputs.dist-changed == 'true' }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions:
       contents: write
       pull-requests: write
