--- a/action.yml
+++ b/action.yml
@@ -1,3 +1,6 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-action.json
+# docs: https://docs.github.com/en/actions/creating-actions/metadata-syntax-for-github-actions
+
 name: Run GitLeaks
 description: Installs and runs GitLeaks in your actions workflow
 
@@ -15,11 +18,11 @@ inputs:
   run:
     description: Set it to "true" to run GitLeaks, or "false" if you don't want it to run (you can do this later manually)
     required: false
-    default: "true"
+    default: 'true'
   fail-on-error:
     description: Set "false" for exiting without an error when GitLeaks run failed
     required: false
-    default: "true"
+    default: 'true'
   github-token:
     description: GitHub auth token. Since there's a default, this is typically not supplied by the user
     required: false
