--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "description": "Installs and runs gitleaks in your actions workflow",
   "main": "src/index.js",
   "scripts": {
-    "lint": "eslint ./src",
-    "build": "ncc build src/index.js -o dist --source-map --minify --no-cache"
+    "lint": "eslint --config package.json ./src/**/*.js",
+    "build": "ncc build src/index.js -o dist --minify --no-cache"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,19 @@
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.1",
-    "eslint": "^8.57.0",
-    "jest": "^29.7.0"
+    "eslint": "^8.57.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "commonjs": true,
+      "es6": true,
+      "node": true
+    },
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "sourceType": "module",
+      "ecmaVersion": 2018
+    },
+    "rules": {}
   }
 }
