--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -65,13 +65,15 @@ jobs:
         with: {commit_message: Automatic distributive rebuild}
 
   run-this-action:
-    name: Run action (${{ matrix.runs-on }}, version ${{ matrix.version }})
+    name: Run action (${{ matrix.runs-on }}, ${{ matrix.version }})
     runs-on: ${{ matrix.runs-on }}
     strategy:
       fail-fast: false
       matrix:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
         version: [7.3.0, 8.7.1, 8.18.4, latest]
+        exclude:
+          - {runs-on: macos-latest, version: 7.3.0} # GitLeaks v7.x for macOS on arm64 is not supported
     steps:
       - uses: actions/checkout@v4
         with: {fetch-depth: 0}
