--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "description": "Installs and runs gitleaks in your actions workflow",
   "main": "src/index.js",
   "scripts": {
-    "lint": "eslint --config package.json './src/**/*.js'",
+    "lint": "eslint './src/**/*.js'",
     "build": "ncc build src/index.js -o dist --minify --no-cache"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gacts/gitleaks.git"
   },
+  "type": "module",
   "keywords": [
     "GitHub",
     "Actions",
@@ -22,7 +23,7 @@
   },
   "homepage": "https://github.com/gacts/gitleaks#readme",
   "dependencies": {
-    "@actions/cache": "^4.0.3",
+    "@actions/cache": "^4.0.5",
     "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^6.0.1",
@@ -30,20 +31,16 @@
     "@actions/tool-cache": "^2.0.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.34.0",
     "@vercel/ncc": "^0.38.3",
-    "eslint": "^8.57.1"
+    "eslint": "^9.34.0",
+    "globals": "^16.3.0"
   },
-  "eslintConfig": {
-    "env": {
-      "commonjs": true,
-      "es6": true,
-      "node": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-      "sourceType": "module",
-      "ecmaVersion": 2018
-    },
-    "rules": {}
+  "volta": {
+    "node": "24"
+  },
+  "engines": {
+    "node": ">=24"
   }
 }
